--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,149 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: ;
+@import url(css/fonts.css);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto-Regular";
+  list-style: none;
 }
+/*  
+######################################################
+##################### Nav start ######################
+######################################################
+*/
+.navbar {
+  background-color: white;
+  width: 100%;
+  height: 172px;
+  overflow: hidden;
+  position: relative;
+  padding: 0;
+  .container-xl {
+    padding: 0;
+
+    div {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+      .circle {
+        width: 212px;
+        height: 212px;
+        border-radius: 50%;
+        background-color: #7da00c;
+        position: relative;
+        top: -50px;
+        z-index: 1;
+        img {
+          z-index: 2;
+          width: 153px;
+          height: 132px;
+          display: flex;
+          align-items: center;
+          position: absolute;
+          top: 60%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      ul {
+        display: flex;
+        gap: 64px;
+        i {
+          padding-left: 28px;
+          color: var(--salat, #688800);
+        }
+        li {
+          a {
+            text-decoration-line: none;
+            font-family: "ElMessiri-Regular";
+            color: var(--salat, #688800);
+            text-align: center;
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+}
+
+/*  
+######################################################
+##################### Nav END ########################
+######################################################
+*/
+
+/*  
+######################################################
+##################### header start ###################
+######################################################
+*/
+
+header {
+  height: 550px;
+  .container-xl {
+    .carousel {
+      .carousel-inner {
+        .carousel-item {
+          .header__content {
+            padding-top: 19px;
+            display: flex;
+            .header__imgs {
+              div {
+                width: 339.265px;
+                height: 339.389px;
+                border-radius: 50%;
+                background: var(--gradient-green-1, linear-gradient(321deg, #536614 0%, #97C20B 100%));
+                box-shadow: 20px 20px 30px 0px rgba(0, 0, 0, 0.10);
+                z-index: 2;
+                margin: 150px 0 0 153px;
+                justify-content: center;
+                align-items: center;
+                display: flex;
+
+                &::after {  
+                content: "";
+                border-radius: 50%;
+                background: var(--gradient-green-1, linear-gradient(321deg, #536614 0%, #97C20B 100%));
+                opacity: 0.2;
+                z-index: -3;
+                padding: 190px;
+                }
+              }
+              img{
+                position: absolute;
+                top: 78px;
+                left: 240px;
+                height: 456.711px;
+                z-index: 2;
+              }
+                .potato{
+                position: absolute;
+                top: 370px;
+                left: 317px;
+                height: 183.395px;
+                z-index: 1;
+              }
+            }
+            .header__info{
+                h2{
+                    color: var(--salat, #688800);
+                    font-family: Amatic SC;
+                    font-size: 36px;
+
+                }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+/*  
+######################################################
+################### header END #######################
+######################################################
+*/
