reload file sass

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "AmaticSC-Regular";
-    src: url(../fonts/AmaticSC-Regular.ttf);
+    src: url(./fonts/AmaticSC-Regular.ttf);
 }
 @font-face {
     font-family: "Roboto-Regular";
