--- a/style.scss
+++ b/style.scss
@@ -339,3 +339,64 @@ header {
 ################# Section Oil END ####################
 ######################################################
 */
+.about{
+  .container-xl{
+    h5{
+      color: var(--text, #4A4A4A);
+      text-align: center;
+      font-size: 48px;
+      font-family: "AmaticSC-Regular";
+      
+      }
+   .about__content{
+    display: flex;
+    position: relative;
+    padding-top: 48px;
+      
+      .box__content{
+        position: relative;
+        img{
+          padding-left: 84px;
+          z-index: 3;
+        }
+        .box__img{
+          width: 153px;
+          height: 357px;
+          background: var(--salat, #688800);
+          position: absolute;
+          top: 48px;
+          z-index: -1;
+          opacity: 0.4;
+        }
+
+      }
+   }
+   .title{
+    width: 609px;
+    height: 357px;
+    padding: 0 28px;
+    position: absolute;
+    background-color: white;
+    right: 100px;
+    top: 48px;
+    h5{
+      font-size: 32px;
+      font-family: "AmaticSC-Regular";
+      color: var(--text, #4A4A4A);
+      text-align: left;  
+      padding-top: 48px;
+    }
+    p{
+      width: 626px;
+
+    }
+   }
+
+  }
+}
+
+/*  
+######################################################
+################# Section About end ################
+######################################################
+*/
